<resources>
    <string name="app_name">Superhero Match</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_permissions_request">Permissions Request</string>
    <string name="previous">Previous</string>
    <string name="continue_to_next">Continue</string>
    <string name="iam">I am</string>
    <string name="looking_for">I am looking for</string>
    <string-array name="i_am_interested_in">
        <item>Select</item>
        <item>Chat</item>
        <item>Dating</item>
        <item>Long term relationship</item>
    </string-array>
    <string name="my_age">My Age</string>
    <string name="my_height">My Height</string>
    <string name="my_hair">My Hair</string>
    <string name="my_body_type">My Body Type</string>
    <string name="my_ethnicity">My Ethnicity</string>
    <string name="my_education">My Education</string>
    <string name="my_profession">My Profession</string>
    <string name="hint_about">Tell something interesting about yourself. Maximum of 500 characters.</string>
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_country">My Country</string>
    <string name="type_in_your_city">Type in your city...</string>
    <string name="suggestions">Suggestions</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="user_profile_image">User profile image</string>
    <string name="user_profile_settings">User Profile Settings</string>
    <string name="user_profile_edit">User Profile Edit</string>
    <string name="about">About</string>
    <string name="height">Height</string>
    <string-array name="hair">
        <item>Select</item>
        <item>Black</item>
        <item>Blonde</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Mixed Color</item>
        <item>Bald</item>
    </string-array>
    <string-array name="body_type">
        <item>Select</item>
        <item>Prefer Not To Say</item>
        <item>A Few Pounds Extra</item>
        <item>Athletic</item>
        <item>Average</item>
        <item>Big And Tall/BBW</item>
        <item>Thin</item>
    </string-array>
    <string-array name="education">
        <item>Select</item>
        <item>High School</item>
        <item>Bachelors Degree</item>
        <item>Masters Degree</item>
        <item>PhD/Post Doctoral</item>
    </string-array>
    <string name="profession">Profession</string>
    <string name="user_profile_pic">User Profile Picture</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string-array name="ethnicity">
        <item>Select</item>
        <item>Asian</item>
        <item>Black</item>
        <item>Caucasian</item>
        <item>Hispanic</item>
        <item>Indian</item>
        <item>Middle Eastern</item>
        <item>Mixed Race</item>
        <item>Native American</item>
        <item>Other Ethnicity</item>
    </string-array>
    <string name="my_favorites">My Favorites</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="you">You</string>
    <string name="nearby">Nearby</string>
    <string name="random_chats">Random Chats</string>
    <string name="make_friends">Make Friends</string>
    <string name="discover">Discover</string>
    <string name="discover_new">Discover New</string>
    <string name="show_me_on_discover">Show me on Discover</string>
    <string name="only_from_my_country">Show me suggestions only from my country</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string-array name="age">
        <item>Select</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="distance">Distance</string>
    <string name="_100">100+</string>
    <string name="show_message_notifications">Show new message notifications</string>
    <string name="show_new_matches_notifications">Show new matches notifications</string>
    <string name="show_likes_notifications">Show likes notifications</string>
    <string name="show_profile_visits_notifications">Show profile visits notifications</string>
    <string name="show_my_recommendations_notifications">Show my recommendations notifications</string>
    <string name="type_in_your_profession">Type in your profession…</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_your_password_click_here">Forgot your password? Click here</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="to_do_list">To-Do List</string>
    <string name="terms_amp_policies"><u>Terms &amp; Policies</u></string>
    <string name="copyright_2017_mwsoft_privacy_policy">Copyright 2019 MWSOFT <u>Privacy Policy</u></string>
    <string name="please_enter_your_phone_number">Please enter your phone number and click Send Code.</string>
    <string name="we_will_send_you_sms_with_registration_code">We will send you SMS with verification code.</string>
    <string name="loading_message">It may take up to 30 seconds for you to receive verification code. Once verification code is received, enter it and click Verify Code.</string>
    <string name="send_code">Send Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="default_distance">25%1$s</string>
    <string name="selected_distance">%1$d%2$s</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="hello_superhero">Hello Superhero!</string>
    <string name="thank_you_for_installing_superhero_match">Thank you for installing Superhero Match!</string>
    <string name="help_finding_superhero_date">We will help you finding your Superhero date!</string>
    <string name="superhero_find_other_superheros">With Superhero Match you can find other Superheros near you.</string>
    <string name="superhero_find_other_superheros_how">When you see a Superhero that you like, just like them, and if they like you as well, you will get a Superhero Match notification. And then you can chat with each other.</string>
    <string name="superhero_before_you_start">Before you can start looking for other Superheros we will ask you to give Superhero Match all the needed permissions, verify your Superhero Identity by confirming your phone number and tell us a little bit about yourself.</string>
    <string name="permissions_make_manage_calls">Permission Make And Manage Phone Calls</string>
    <string name="permissions_make_manage_calls_desc">Superhero Match requires this permission in order to determine your country name and your country phone code.</string>
    <string name="permissions_access_files">Permission Access Photos And Files</string>
    <string name="permissions_access_files_desc">Superhero Match requires this permission in order to make it possible for you to upload your profile pictures.</string>
    <string name="permissions_denied">Permission Was Denied</string>
    <string name="permissions_denied_desc">Superhero Match requires all of the requested permissions in order to function properly. To complete registration and start looking for other Superheros please grant all of the requested permissions.</string>
    <string name="permission_granted">This permission has already been granted</string>
    <string name="permissions_done">All permissions have been granted</string>
    <string name="permissions_grant_req">Grant this permission by tapping on the button \'GRANT PERMISSION\'.</string>
    <string name="ok">OK</string>
    <string name="manual_grant_permission"><![CDATA[You can also grant this permission manually in your phone settings by navigating to Settings > Apps > Superhero Match > Permissions.]]></string>
    <string name="grant_permission">Grant Permission</string>
    <string name="superhero_name">Superhero name…</string>
    <string name="channel_new_match_id">channelNewMatchId</string>
    <string name="channel_new_match_name">channelNewMatch</string>
    <string name="send_message">Send message</string>
    <string-array name="i_am_genders">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="i_am_looking_for_genders">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Both</item>
    </string-array>
    <string name="logo_description">Logo</string>
    <string name="your_gender">What is your gender?</string>
    <string name="hint_super_power">Tell about your Super Power. Maximum of 250 characters.</string>
    <string name="super_power">Super Power</string>
    <string name="distance_units">Kilometers / Miles</string>
    <string name="km">Kilometers</string>
    <string name="mi">Miles</string>
    <string name="distance_unit">Distance Unit</string>
</resources>