<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChangePasswordCurrentPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/current_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChangePasswordNewPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/new_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/etChangePasswordCurrentPassword"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChangePasswordConfirmNewPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/confirm_new_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/etChangePasswordNewPassword"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/btnChangePassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etChangePasswordConfirmNewPassword"
        android:background="@drawable/my_edit_text"
        android:layout_marginTop="40dp"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>