<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/ivIntroPagerLogo"
        android:src="@drawable/mask_512"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvIntroPagerHello"
        android:text="@string/hello_superhero"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivIntroPagerLogo"
        android:layout_marginTop="25dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvIntroPagerThanks"
        android:text="@string/thank_you_for_installing_superhero_match"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvIntroPagerHello"
        android:layout_marginTop="25dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvIntroPagerAlmostReady"
        android:text="@string/help_finding_superhero_date"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvIntroPagerThanks"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"/>

</RelativeLayout>