<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSuperHeroDistanceUnitQ"
        android:text="@string/distance_unit"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="160dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/btnDistanceUnitKm"
        android:layout_toStartOf="@+id/tvDistanceUnitDelimeter"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_gender_button"
        android:text="@string/km"
        android:layout_below="@+id/tvSuperHeroDistanceUnitQ"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/tvDistanceUnitDelimeter"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvSuperHeroDistanceUnitQ"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/btnDistanceUnitMi"
        android:layout_toEndOf="@+id/tvDistanceUnitDelimeter"
        android:layout_marginStart="20dp"
        android:background="@drawable/my_gender_button"
        android:text="@string/mi"
        android:layout_below="@+id/tvSuperHeroDistanceUnitQ"
        android:layout_marginTop="20dp"/>

</RelativeLayout>