<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUserName"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/userName"
        android:textSize="14sp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_below="@+id/etUserName"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/email"
        android:textSize="14sp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/password"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmPassword"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/confirm_password"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_edit_text"/>

</RelativeLayout>